--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@fontsource/open-sans": "^4.3.0",
     "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
     "@ohfinance/oh-ui": "^1.1.0",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
@@ -16,9 +17,12 @@
     "bignumber.js": "^9.0.1",
     "ethers": "^5.1.4",
     "lodash": "^4.17.21",
+    "md5": "^2.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-gravatar": "^2.6.3",
     "react-helmet-async": "^1.0.9",
+    "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
