--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@fontsource/open-sans": "^4.3.0",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.58",
     "@ohfinance/oh-ui": "^1.1.0",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
