--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.58",
+    "@ohfinance/oh-contracts": "^1.1.0",
     "@ohfinance/oh-ui": "^1.1.0",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
@@ -27,10 +28,10 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
-    "web3": "^1.3.5",
-    "web3-core": "^1.3.5",
-    "web3-eth-contract": "^1.3.5",
-    "web3-utils": "^1.3.5"
+    "web3": "^1.2.6",
+    "web3-core": "^1.2.6",
+    "web3-eth-contract": "^1.2.6",
+    "web3-utils": "^1.2.6"
   },
   "scripts": {
     "start": "react-scripts start",
