--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.58",
-    "@ohfinance/oh-contracts": "^1.1.0",
+    "@ohfinance/oh-web3-types": "^1.0.0",
     "@ohfinance/oh-ui": "^1.1.0",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
