--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lodash": "^4.17.21",
     "md5": "^2.3.0",
     "react": "^17.0.2",
+    "react-countup": "^4.3.3",
     "react-dom": "^17.0.2",
     "react-gravatar": "^2.6.3",
     "react-helmet-async": "^1.0.9",
