--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.58",
-    "@ohfinance/oh-web3-types": "^1.0.0",
     "@ohfinance/oh-ui": "^1.1.0",
+    "@ohfinance/oh-web3-types": "^1.0.0",
+    "@reduxjs/toolkit": "^1.6.2",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
@@ -30,8 +31,11 @@
     "react-gravatar": "^2.6.3",
     "react-helmet-async": "^1.0.9",
     "react-icons": "^4.2.0",
+    "react-redux": "^7.2.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-transition-group": "^4.4.2",
+    "redux-localstorage-simple": "^2.4.1",
     "typescript": "^4.1.2",
     "web3": "^1.2.6",
     "web3-core": "^1.2.6",
