Add state updater components, add multicall contract, testnet setup for Rinkeby and Kovan

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
     "skipLibCheck": true,
     "strict": true,
     "strictNullChecks": false,
-    "target": "es5"
+    "target": "es5",
+    "downlevelIteration": true
   },
   "include": [
     "src"
