--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Website Deploy, Static CI
 
 on:
   push:
-    branches: [backup/main]
+    branches: [beta]
 
 env:
   PACKAGE_PATH: "build"
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@backup/main
+        uses: actions/checkout@beta
 
       - name: Use Node.js ${{ env.NODE_VERSION }}
         uses: actions/setup-node@v1
