--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@types/react-dom": "^17.0.0",
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
-    "@web3-react/walletconnect-connector": "^6.2.0",
+    "@web3-react/walletconnect-connector": "6.2.4",
     "bignumber.js": "^9.0.1",
     "ethers": "^5.4.7",
     "lodash": "^4.17.21",
