--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
+    "file-loader": "^6.2.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.1.1",
     "prettier": "^2.4.1",
