--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,5 +20,10 @@
   "[typescript]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
-  "css.customData": ["./.vscode/css-data.json"]
+  "css.customData": ["./.vscode/css-data.json"],
+  "workbench.colorCustomizations": {
+    "activityBar.background": "#3E291F",
+    "titleBar.activeBackground": "#57392C",
+    "titleBar.activeForeground": "#FCF9F8"
+  }
 }
