--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -9,21 +9,14 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [14.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
     steps:
     - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Use Node.js 14
       uses: actions/setup-node@v2
       with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
+        node-version: 14.x
+    - run: npm run contracts:compile:abi
     - run: npm install
     - run: npm run build
     - run: npm run export
