--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -17,6 +17,7 @@ jobs:
       with:
         node-version: 14.x
 
+    - run: rm package-lock.json
     - run: npm install
     - run: npm run contracts:compile:abi
     - run: npm run build
